Add context to service layers
