# api/gophermart/handler/interfaces.go
@@ -1,16 +1,20 @@
 package handler
 
-import "github.com/ulixes-bloom/ya-gophermart/internal/models"
+import (
+	"context"
+
+	"github.com/ulixes-bloom/ya-gophermart/internal/models"
+)
 
 type App interface {
-	GetUserBalance(userID int64) (*models.Balance, error)
-	GetUserWithdrawals(userID int64) ([]models.Withdrawal, error)
-	WithdrawFromUserBalance(userID int64, withdrawalReq *models.WithdrawalRequest) error
+	GetUserBalance(ctx context.Context, userID int64) (*models.Balance, error)
+	GetUserWithdrawals(ctx context.Context, userID int64) ([]models.Withdrawal, error)
+	WithdrawFromUserBalance(ctx context.Context, userID int64, withdrawalReq *models.WithdrawalRequest) error
 
-	RegisterOrder(userID int64, orderNumber string) error
-	GetOrdersByUser(userID int64) ([]models.Order, error)
+	RegisterOrder(ctx context.Context, userID int64, orderNumber string) error
+	GetOrdersByUser(ctx context.Context, userID int64) ([]models.Order, error)
 	ValidateOrderNumber(orderNumber string) bool
 
-	ValidateUser(user *models.User) (*models.User, error)
-	RegisterUser(user *models.User) (int64, error)
+	ValidateUser(ctx context.Context, user *models.User) (*models.User, error)
+	RegisterUser(ctx context.Context, user *models.User) (int64, error)
 }
